  * wnpp-check: Correct download links to fix regression from previous release.
  * Switch to debhelper 9.
  * Convert Python scripts to python3 (Closes: #680313).

  [ James McCoy ]
  * debdiff: Handle control files with odd permissions.  Thanks to Julian
    Gilbey for the patch.  (Closes: #702610)

  [ Dmitrijs Ledkovs ]
  * wrap-and-sort: Add trailing comma option (Closes: #703323).

 -- Benjamin Drung <bdrung@debian.org>  Tue, 19 Feb 2013 17:22:32 +0100

devscripts (2.13.0) experimental; urgency=low

  [ Christoph Berg ]
  * origtargz: New script: fetch the orig tarball of a Debian package from
    various sources, and unpack it
  * debcommit: --changelog-info will pass --author and --date for git commits.

  [ James McCoy ]
  * licensecheck: Recognize MPL 2.0 licenses.  Thanks to Ryan Pavlik for the
    patch.  (Closes: #687664)
  * namecheck: Check Apache's projects page for names.  (Closes: #686862)
  * debcommit:
    + Drop checks for old dpkg versions and always use the necessary Perl
      modules (Dpkg::Changelog::Parse, Dpkg::Vendor::Ubuntu,
      Dpkg::Changelog::Entry::Debian).
    + Add changelog info support for hg and bzr.
  * annotate-output:
    + Handle an incomplete line of output.  (Closes: #695609)
    + Don't treat backslashes in the command's output as an escape.  (Closes:
      #695613)
    + Don't swallow leading whitespace.  (Closes: #695612, LP: #1120917)
  * dscverify: Use "gpg --status-fd" to determine if a valid signature is
    found and only use the signed content.  (Closes: #695914)
  * wrap-and-sort: Fix repeated word in man page.  (Closes: #696363)

  [ Dmitry Smirnov ]
  * licensecheck:
    + Remove any regular comments pattern. (Closes: #526698)
    + Improve command line parsing.
    + Fix GPL license version detection bug.
    + Fix BSD-3-clause detection.

  [ Paul Wise ]
  * checkbashisms: When examining a bash script, indicate the lack of use of
    bashisms.
  * uscan: