@@ -17,6 +17,9 @@ devscripts (2.13.1) UNRELEASED; urgency=low
   [ Dmitrijs Ledkovs ]
   * wrap-and-sort: Add trailing comma option (Closes: #703323).
 
+  [ Markus Wanner ]
+  * uscan: more debug info to allow checking uversionmangle patterns.
+
  -- Benjamin Drung <bdrung@debian.org>  Tue, 19 Feb 2013 17:22:32 +0100
 
 devscripts (2.13.0) experimental; urgency=low
